frontend: fix grid should shrink
Long addresses made the grid component not shrink and caused a
horizontal scrollbar in confirm views.

--- a/frontends/web/src/components/layout/grid.module.css
+++ b/frontends/web/src/components/layout/grid.module.css
@@ -8,14 +8,15 @@
 .column {
     display: flex;
     flex-direction: column;
+    min-width: 0;
 }
 
 .grid-columns-1 {
-    grid-template-columns: repeat(1, 1fr);
+    grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
 .grid-columns-2 {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .column-2 {
